# poloniex-trading-platform

./: .clinerules  .dockerignore  .env.example  .env.production  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .railwayignore  .yarnrc.yml  0001-Fix-TypeScript-build-errors-Chrome-API-types-unused-.patch  AGENTS.md  AGENT_SERVICE_FIXES.md  API_ISSUES_AND_SOLUTIONS.md  API_KEYS_GUIDE.md  AUDIT_REPORT.md  BALANCE_DEBUG_INSTRUCTIONS.md  BALANCE_DISPLAY_ANALYSIS.md  BALANCE_FIX_SUMMARY.md  BALANCE_FLOW_DIAGRAM.md  CLAUDE.md  COMPLETE_IMPLEMENTATION.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_FIX_PLAN.md  CORS_WEBSOCKET_FIX.md  CRITICAL_ERROR_RESOLUTION.md  DATABASE_MIGRATION_GUIDE.md  DEPLOYMENT_FIX_COMPLETE.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  ENCRYPTION_KEY_MANAGEMENT.md  ENVIRONMENT_CONFIG.md  FINAL_FIXES_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FULLY_AUTONOMOUS_TRADING.md  IMMEDIATE_FIXES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SPRINT_2025-11-24.md  (+96 more)
kernels/core/: README.md  fisher_rao_optimizer.py  health.py  main.py  nixpacks.toml  poloniex_client.py  pyproject.toml  railpack.json  railway.json
kernels/core/proprietary_core/: __init__.py  sizing.py  strategy_loop.py
kernels/core/qig_core_local/: __init__.py
ml-worker/: README.md  main.py  pyproject.toml  railpack.json  requirements.txt
ml-worker/data/: .gitignore  compare_candidate_vs_current.py  run_real_sweep.py
ml-worker/scripts/: byte_diff_ml_predict.py  qig_purity_check.py  recalibrate_lane_sl_tp_to_roi.sql  turn_on_trend_lane.sql  update_leverage_baseline_to_target_20x.sql  update_scalp_tp_to_3pct.sql  verify_qig_vendor.py
ml-worker/src/: ensemble_predictor.py  forecast_horizon_observer.py  forecast_horizons.py  observable_governance.py  predict.py  qig_engine.py  regime_signal.py  signal_mapping.py  train_models.py
ml-worker/src/backtest/: __init__.py  cli.py  prelaunch_checklist.py  replay.py  spec.py  sweep.py
ml-worker/src/db/: __init__.py  pool.py
ml-worker/src/events/: __init__.py  outcome_publisher.py
ml-worker/src/exchange/: __init__.py  poloniex_v3.py
ml-worker/src/models/: Prophet_model.py
ml-worker/src/monkey_kernel/: QIG_MIGRATION.md  __init__.py  agent_l_classifier.py  anderson_convergence.py  autonomic.py  basin.py  basin_sync.py  basin_sync_db.py  bus_events.py  candle_patterns.py  canonical_invariant.py  compositional_executive.py  consciousness_metrics.py  coordinator.py  developmental.py  emotions.py  executive.py  expectation_bubble.py  figure8.py  foresight.py  forge.py  heart.py  hindsight_regret.py  kernel_bus.py  kernel_predictions.py  learning_gate.py  modes.py  motivators.py  mtf_bootstrap.py  mtf_l_classifier.py  mushroom.py  ocean.py  ocean_reward.py  ocean_sleep_trigger.py  parameters.py  perception.py  perception_scalars.py  persistence.py  phi_gate.py  physical_emotions.py  (+17 more)
ml-worker/src/proprietary_core/: __init__.py  api.py  basins.py  coupling.py  lattice_inputs.py  lattice_inputs_alternatives.py  regime.py  regime_adapter.py  regime_observer.py  regime_qigwarp.py  regime_shadow.py  strategy_loop.py  training.py
ml-worker/src/qig_dreams_local/: __init__.py  consolidator.py  sleep.py
ml-worker/src/trading/: __init__.py  exit_decisions.py  live_signal.py  order_placement.py  reconciliation.py  risk_kernel.py
ml-worker/src/utils/: redis_listener.py
ml-worker/tests/: test_dream_consolidation.py  test_forecast_horizon_observer.py  test_forecast_horizons.py  test_k_shadow.py  test_observable_governance_warp.py  test_proposal_bus_from_decision.py  test_record_warp_telemetry_for_tick.py  test_regime_shadow.py  test_regime_signal.py  test_strategy_to_signal.py  test_tick_publishes_proposal.py  test_training_factory.py
ml-worker/tests/backtest/: test_prelaunch_checklist.py  test_replay.py  test_sweep.py
ml-worker/tests/exchange/: test_poloniex_v3_signer.py  (+1 more)
python-services/poloniex/: .env.example  Dockerfile  Procfile  health.py  ingest_markets.py  main.py  nixpacks.toml  poloniex_client.py  pyproject.toml  railpack.json  railway.json  railway.toml  requirements.txt  simple_main.py
(+1779 files in other folders)
