[project]
name = "ml-worker"
version = "1.0.0"
description = "ML Worker Service for Poloniex Trading Platform"
requires-python = ">=3.11"
dependencies = [
    "uvicorn[standard]>=0.30.0",
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "celery>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"