[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poloniex-ml-worker"
version = "1.0.0"
description = "Poloniex ML/Worker service for futures market data ingestion"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "uvloop>=0.19.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "pydantic>=2.10.3",
    "requests>=2.32.4",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0"
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true