[project]
name = "ml-worker"
version = "1.0.0"
description = "ML Worker Service for Poloniex Trading Platform"
requires-python = ">=3.11"
dependencies = [
    "uvicorn[standard]>=0.30.0",
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "celery>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0"
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true